Set Up Game Framework
-Setup a game manager (global)
-Created the Function Library
-Added Show Mouse function
-Added Distance Between function
-Added Angle Between function
-Added the State Enumeration

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_MyContent/Maps/Level_1.Level_1
 EditorStartupMap=/Game/_MyContent/Maps/Level_1.Level_1
+GlobalDefaultGameMode=/Game/_MyContent/Blueprints/BP_MyGameMode.BP_MyGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
